
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int wchar_t ;
typedef int BUF ;


 int FreeBuf (int *) ;
 int IsInLines (int *,char*,int) ;
 int * ReadDumpW (int *) ;

bool IsInLinesFile(wchar_t *filename, char *str, bool instr)
{
 bool ret = 0;
 BUF *b;

 if (filename == ((void*)0) || str == ((void*)0))
 {
  return 0;
 }

 b = ReadDumpW(filename);
 if (b == ((void*)0))
 {
  return 0;
 }

 ret = IsInLines(b, str, instr);

 FreeBuf(b);

 return ret;
}
